--- a/app/src/main/res/drawable/aurora_button_ripple.xml
+++ b/app/src/main/res/drawable/aurora_button_ripple.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/aurora_cyan">
+    android:color="@color/aurora_blue">
     <item android:id="@android:id/background">
         <shape>
-            <solid android:color="@color/aurora_mint" />
+            <gradient
+                android:angle="135"
+                android:startColor="@color/aurora_purple"
+                android:endColor="@color/aurora_green" />
             <stroke
                 android:width="1dp"
-                android:color="@color/aurora_cyan" />
+                android:color="@color/purple_glow" />
             <corners android:radius="16dp" />
         </shape>
     </item>
