--- a/app/src/main/res/drawable/aurora_card.xml
+++ b/app/src/main/res/drawable/aurora_card.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:angle="45"
-        android:startColor="@color/aurora_dark_gray"
-        android:centerColor="@color/aurora_gray"
-        android:endColor="@color/aurora_dark_gray"
-        android:type="linear" />
+    <solid android:color="@color/aurora_glass" />
     <corners android:radius="16dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/aurora_cyan" />
+        android:color="@color/glass_border" />
 </shape>
