--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -7,7 +7,7 @@
 
     <!-- Ghost body - purple blob shape -->
     <path
-        android:fillColor="#A78BFA"
+        android:fillColor="@color/aurora_mint"
         android:pathData="M54,28
             c-15,0 -26,10 -26,24
             c0,8 3,15 8,20
@@ -20,7 +20,7 @@
 
     <!-- Ghost tail/wavy bottom -->
     <path
-        android:fillColor="#A78BFA"
+        android:fillColor="@color/aurora_mint"
         android:pathData="M28,72
             c-2,3 -2,7 0,10
             c2,3 5,3 7,0
@@ -34,7 +34,7 @@
 
     <!-- Goggles/VR glasses frame -->
     <path
-        android:fillColor="#4B5563"
+        android:fillColor="@color/black"
         android:pathData="M38,42
             h32
             a4,4 0 0,1 4,4
@@ -47,7 +47,7 @@
 
     <!-- Left lens -->
     <path
-        android:fillColor="#60A5FA"
+        android:fillColor="@color/white"
         android:pathData="M42,46
             h12
             a2,2 0 0,1 2,2
@@ -60,7 +60,7 @@
 
     <!-- Right lens -->
     <path
-        android:fillColor="#60A5FA"
+        android:fillColor="@color/white"
         android:pathData="M58,46
             h10
             a2,2 0 0,1 2,2
@@ -73,7 +73,7 @@
 
     <!-- Map grid lines (simplified) -->
     <path
-        android:strokeColor="#3B82F6"
+        android:strokeColor="@color/aurora_mint"
         android:strokeWidth="2"
         android:strokeLineCap="round"
         android:pathData="M20,82 L88,82
@@ -83,7 +83,7 @@
 
     <!-- Route path on map -->
     <path
-        android:strokeColor="#EC4899"
+        android:strokeColor="@color/black"
         android:strokeWidth="3"
         android:strokeLineCap="round"
         android:strokeLineJoin="round"
@@ -97,7 +97,7 @@
 
     <!-- Link/share icon in speech bubble -->
     <path
-        android:fillColor="#E0F2FE"
+        android:fillColor="@color/white"
         android:pathData="M72,24
             c-6,0 -10,4 -10,9
             c0,2 1,4 2,6
@@ -109,7 +109,7 @@
 
     <!-- Link chain icon -->
     <path
-        android:strokeColor="#0284C7"
+        android:strokeColor="@color/black"
         android:strokeWidth="2.5"
         android:strokeLineCap="round"
         android:fillColor="#00000000"
@@ -126,7 +126,7 @@
 
     <!-- Smile -->
     <path
-        android:strokeColor="#4B5563"
+        android:strokeColor="@color/black"
         android:strokeWidth="2"
         android:strokeLineCap="round"
         android:fillColor="#00000000"
