--- a/app/src/main/res/drawable/neon_grid_tile_fine.xml
+++ b/app/src/main/res/drawable/neon_grid_tile_fine.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <size
-        android:width="80dp"
-        android:height="80dp" />
+        android:width="20dp"
+        android:height="20dp" />
     <solid android:color="@android:color/transparent" />
     <stroke
         android:width="1dp"
-        android:color="@color/glass_border" />
+        android:color="@color/aurora_cyan" />
 </shape>
