--- a/app/src/main/res/drawable/neon_primary_button.xml
+++ b/app/src/main/res/drawable/neon_primary_button.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/aurora_cyan">
+    android:color="@color/aurora_blue">
     <item android:id="@android:id/background">
         <shape>
             <gradient
-                android:startColor="@color/aurora_mint"
-                android:endColor="@color/aurora_cyan"
-                android:angle="0" />
+                android:startColor="@color/aurora_purple"
+                android:endColor="@color/aurora_green"
+                android:angle="135" />
             <stroke
                 android:width="1dp"
-                android:color="@color/aurora_cyan" />
+                android:color="@color/purple_glow" />
             <corners android:radius="18dp" />
         </shape>
     </item>
