--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-  <!-- Pastel Mint Theme -->
+  <!-- Neon Glass Theme (themeref.html) -->
   <style name="Theme.CarNavRelay" parent="Theme.Material3.DayNight.NoActionBar">
-    <!-- Primary Colors (Mint) -->
+    <!-- Primary Colors (Purple/Cyan) -->
     <item name="colorPrimary">@color/aurora_purple</item>
-    <item name="colorPrimaryVariant">@color/aurora_blue</item>
-    <item name="colorOnPrimary">@color/white</item>
+    <item name="colorPrimaryVariant">@color/purple_dark</item>
+    <item name="colorOnPrimary">@color/white_soft</item>
     <item name="colorPrimaryContainer">@color/aurora_gray</item>
     <item name="colorOnPrimaryContainer">@color/text_primary</item>
 
     <!-- Secondary Colors -->
     <item name="colorSecondary">@color/aurora_cyan</item>
     <item name="colorSecondaryVariant">@color/aurora_green</item>
-    <item name="colorOnSecondary">@color/text_primary</item>
+    <item name="colorOnSecondary">@color/white_soft</item>
     <item name="colorSecondaryContainer">@color/aurora_gray</item>
     <item name="colorOnSecondaryContainer">@color/text_primary</item>
 
@@ -23,17 +23,21 @@
 
     <!-- Error Colors -->
     <item name="colorError">@color/aurora_error</item>
-    <item name="colorOnError">@color/white</item>
+    <item name="colorOnError">@color/white_soft</item>
 
     <!-- System Bars -->
     <item name="android:statusBarColor">@color/aurora_black</item>
     <item name="android:navigationBarColor">@color/aurora_black</item>
-    <item name="android:windowLightStatusBar">true</item>
+    <item name="android:windowLightStatusBar">false</item>
 
     <!-- Shape Appearance -->
     <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.CarNavRelay.SmallComponent</item>
     <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.CarNavRelay.MediumComponent</item>
     <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.CarNavRelay.LargeComponent</item>
+
+    <!-- Default Card Style -->
+    <item name="materialCardViewStyle">@style/Widget.CarNavRelay.CardView</item>
+    <item name="materialButtonStyle">@style/Widget.CarNavRelay.Button</item>
   </style>
 
   <!-- Shape Appearances -->
@@ -56,7 +60,9 @@
   <style name="Widget.CarNavRelay.CardView" parent="Widget.Material3.CardView.Elevated">
     <item name="cardElevation">8dp</item>
     <item name="cardCornerRadius">24dp</item>
-    <item name="cardBackgroundColor">@drawable/aurora_card</item>
+    <item name="cardBackgroundColor">@color/aurora_glass</item>
+    <item name="strokeColor">@color/glass_border</item>
+    <item name="strokeWidth">1dp</item>
   </style>
 
   <!-- Button Styles -->
