Fix XOS crash on drawable background

--- a/app/src/main/res/drawable/aurora_bg.xml
+++ b/app/src/main/res/drawable/aurora_bg.xml
@@ -10,14 +10,10 @@
                 android:type="linear" />
         </shape>
     </item>
-    <item android:alpha="0.18">
-        <bitmap
-            android:src="@drawable/neon_grid_tile"
-            android:tileMode="repeat" />
-    </item>
-    <item android:alpha="0.12">
-        <bitmap
-            android:src="@drawable/neon_grid_tile_fine"
-            android:tileMode="repeat" />
-    </item>
+    <item
+        android:alpha="0.18"
+        android:drawable="@drawable/neon_grid_tile" />
+    <item
+        android:alpha="0.12"
+        android:drawable="@drawable/neon_grid_tile_fine" />
 </layer-list>
