--- a/app/src/main/res/drawable/display_bg_neon.xml
+++ b/app/src/main/res/drawable/display_bg_neon.xml
@@ -9,14 +9,10 @@
                 android:angle="135" />
         </shape>
     </item>
-    <item android:alpha="0.18">
-        <bitmap
-            android:src="@drawable/neon_grid_tile"
-            android:tileMode="repeat" />
-    </item>
-    <item android:alpha="0.12">
-        <bitmap
-            android:src="@drawable/neon_grid_tile_fine"
-            android:tileMode="repeat" />
-    </item>
+    <item
+        android:alpha="0.18"
+        android:drawable="@drawable/neon_grid_tile" />
+    <item
+        android:alpha="0.12"
+        android:drawable="@drawable/neon_grid_tile_fine" />
 </layer-list>
